# linguistic-data-analysis-with-Python-and-R

./: .gitignore  _metadata.yml  _quarto.yml  index.md  main.py  pyproject.toml
binder/: requirements.txt
css/: slides.scss  style.scss  styles.css
docs/: index.html  robots.txt  search.json  sitemap.xml
docs/site_libs/bootstrap/: bootstrap-bb35bf7391011d877829cd03eb1b7bac.min.css
docs/tutorials/: index.html
docs/tutorials/01-spacy-basics/: 01_tokens_pos_assignment.html  index.html  slides.html
extra/: spec.md
tutorials/: index.md
tutorials/01-spacy-basics/: 01_tokens_pos_assignment.ipynb  index.md  slides.qmd
